--- a/admin/products/products.html
+++ b/admin/products/products.html
@@ -133,7 +133,7 @@
                     <div class="flex justify-between">
                         <h2 class="text-2xl font-semibold mb-4">Dashboard</h2>
                         <!-- Add Product Button -->
-                        <a href="add-product.html"
+                        <a href="add-products.html"
                             class="bg-gray-900 text-white text-sm md:text-md py-2 px-5 rounded-md h-fit">Add
                             Product</a>
                     </div>
@@ -141,15 +141,15 @@
                         <table class="min-w-full table-auto mt-6">
                             <thead>
                                 <tr class="bg-gray-300">
-                                    <th class="px-4 py-2 text-left text-nowrap">ID</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Name</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Description</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Original Price</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Discount</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Discount Price</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Added Date</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Update Date</th>
-                                    <th class="px-4 py-2 text-left text-nowrap">Actions</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">ID</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Name</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Description</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Original Price</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Discount</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Discount Price</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Added Date</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Update Date</th>
+                                    <th class="px-4 py-2 border border-gray-900 text-center text-nowrap">Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -159,98 +159,98 @@
 
                                 <!-- Sample Product Row -->
                                 <tr>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         001
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         Flora
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         best perfume ever
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         1299
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize">
                                         20%
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         899
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap">
-                                        <a href="edit-product.php"
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap">
+                                        <a href="edit-products.html"
                                             class="text-blue-600 hover:text-blue-800">Edit</a> |
-                                        <a href="delete-product.php"
+                                        <a href="delete-products.php"
                                             class="text-red-600 hover:text-red-800">Delete</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         001
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         Flora
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         best perfume ever
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         1299
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize">
                                         20%
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         899
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap">
-                                        <a href="edit-product.php"
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap">
+                                        <a href="edit-products.html"
                                             class="text-blue-600 hover:text-blue-800">Edit</a> |
-                                        <a href="delete-product.php"
+                                        <a href="delete-products.php"
                                             class="text-red-600 hover:text-red-800">Delete</a>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         001
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         Flora
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         best perfume ever
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         1299
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize">
                                         20%
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize"><span class="me-[1px]">₹</span>
+                                    <td class="px-4 py-2 border border-gray-900 text-center text-nowrap capitalize"><span class="me-[1px]">₹</span>
                                         899
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap capitalize">
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap capitalize">
                                         2025-01-14
                                     </td>
-                                    <td class="px-4 py-2 text-nowrap">
-                                        <a href="edit-product.php"
+                                    <td class="px-4 py-2 border border-gray-900 text-nowrap">
+                                        <a href="edit-products.html"
                                             class="text-blue-600 hover:text-blue-800">Edit</a> |
-                                        <a href="delete-product.php"
+                                        <a href="delete-products.php"
                                             class="text-red-600 hover:text-red-800">Delete</a>
                                     </td>
                                 </tr>
