--- a/admin/add-product.html
+++ b/admin/add-product.html
@@ -18,44 +18,9 @@
             <div class="">
                 <h1 class="text-2xl font-bold">Admin Panel</h1>
             </div>
-            <ul class="space-y-1 mt-10 hidden lg:block w-full">
-
-                <li>
-                    <a href="../dashboard.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-dashboard-line text-white me-2 text-xl"></i>Dashboard</a>
-                </li>
-                <li>
-                    <a href="users.html" class="text-lg px-3 py-2 inline-block bg-gray-700 rounded-md w-full"><i
-                            class="ri-group-2-line text-white me-2 text-xl"></i>Users</a>
-                </li>
-                <li>
-                    <a href="../products/products.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
-                </li>
-                <li>
-                    <a href="../brands/brands.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-building-4-line text-white me-2 text-xl"></i>Brands</a>
-                </li>
-                <li>
-                    <a href="../shipping.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-truck-line text-white me-2 text-xl"></i>Shipping</a>
-                </li>
-                <li>
-                    <a href="../order-history.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-history-fill text-white me-2 text-xl"></i>Order History</a>
-                </li>
-                <li>
-                    <a href="../payment-history" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-money-rupee-circle-line text-white me-2 text-xl"></i>Payment History</a>
-                </li>
-                <li>
-                    <a href="../discount.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-discount-percent-line text-white me-2 text-xl"></i>Discount</a>
-                </li>
-                <li>
-                    <a href="../../index.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-home-8-line text-white me-2 text-xl"></i>Home</a>
-                </li>
+            <ul class="space-y-2 mt-10 hidden lg:block bg-gray-700 rounded-md w-full">
+                <li><a href="admin-panel.html"
+                        class="text-lg px-3 py-2 inline-block">Dashboard</a></li>
                 <!-- <li class="hover:bg-gray-700 rounded-md"><a href="admin_products.html" class="text-lg px-3 py-2 inline-block ">Manage Products</a>
                 </li>
                 <li class="hover:bg-gray-700 rounded-md"><a href="admin_orders.html" class="text-lg px-3 py-2 inline-block">Orders</a></li> -->
@@ -63,47 +28,14 @@
 
             <div id="admin-menu-btn"><i class="ri-menu-line text-white lg:hidden text-2xl"></i></div>
 
-            <div id="admin-mob-nav"
-                class="pt-5 pb-10 px-4 lg:hidden absolute top-full -left-full transition-all duration-300 w-full bg-gray-900">
-                <ul id="admin-mobile-menu" class="overflow-auto  flex flex-col gap-3 pe-2">
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../dashboard" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-dashboard-line text-white me-2 text-xl"></i>Dashboard</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full bg-gray-700">
-                        <a href="users.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-group-2-line text-white me-2 text-xl"></i>Users</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../products/products.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../brands/brands.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-building-4-line text-white me-2 text-xl"></i>Brands</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../shipping.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-truck-line text-white me-2 text-xl"></i>Shipping</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../order-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-history-fill text-white me-2 text-xl"></i>Order History</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../payment-history.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-money-rupee-circle-line text-white me-2 text-xl"></i>Payment History</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../discount.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-discount-percent-line text-white me-2 text-xl"></i>Discount</a>
-                    </li>
-                    <li class="hover:bg-gray-700 rounded-md w-full">
-                        <a href="../../index.html" class="text-lg px-3 py-2 inline-block rounded-md w-full"><i
-                                class="ri-home-8-line text-white me-2 text-xl"></i>Home</a>
-                    </li>
-                </ul>
-            </div>
+            <ul id="admin-mobile-menu"
+                class="px-4 lg:hidden absolute top-full -left-full transition-all duration-300 w-full h-[100dvh] bg-gray-900">
+                <li class="mt-10 hover:bg-gray-700 rounded-md"><a href="admin-panel.html"
+                        class="text-lg px-3 py-2 inline-block">Dashboard</a></li>
+                <!-- <li class="hover:bg-gray-700 rounded-md"><a href="admin_products.html" class="text-lg px-3 py-2 inline-block ">Manage Products</a>
+                </li>
+                <li class="hover:bg-gray-700 rounded-md"><a href="admin_orders.html" class="text-lg px-3 py-2 inline-block">Orders</a></li> -->
+            </ul>
         </div>
 
         <!-- Main Content -->
