--- a/admin/users/edit-users.html
+++ b/admin/users/edit-users.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add User</title>
+    <title>Edit User</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/css/admin-style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,7 +24,7 @@
     <main class="lg:flex">
         <!-- Sidebar -->
         <div
-            class="z-50 p-5 w-full flex lg:flex-col items-center lg:items-start justify-between lg:justify-start xl:w-[22%] lg:w-[30%] lg:h-[100dvh] bg-gray-900 text-white sticky top-0">
+            class="z-50 p-5 w-full flex lg:flex-col items-center lg:items-start justify-between lg:justify-start  xl:w-[22%] lg:w-[30%] lg:h-[100dvh] bg-gray-900 text-white sticky top-0">
             <div class="">
                 <h1 class="text-2xl font-bold">Admin Panel</h1>
             </div>
@@ -42,8 +42,7 @@
                             class="ri-ink-bottle-line text-white me-2 text-xl"></i>Products</a>
                 </li>
                 <li>
-                    <a href="../carts-details.html" class="text-lg px-3 py-2 inline-block w-full"><i
-                            class="ri-shopping-cart-line text-white me-2 text-xl"></i>Cart</a>
+                    <a href="../carts-details.html" class="text-lg px-3 py-2 inline-block w-full"><i class="ri-shopping-cart-line text-white me-2 text-xl"></i>Cart</a>
                 </li>
                 <li>
                     <a href="../brands/brands.html" class="text-lg px-3 py-2 inline-block w-full"><i
@@ -123,12 +122,12 @@
             </div>
         </div>
 
-        <!-- Main Content -->
-        <div class="px-5 py-8 md:p-8 flex flex-col items-center xl:w-[78%] lg:w-[70%] w-full">
-            <h1 class="text-3xl font-semibold mb-6">Add New User</h1>
+         <!-- Main Content -->
+         <div class="px-5 py-8 md:p-8 flex flex-col items-center xl:w-[78%] lg:w-[70%] w-full">
+            <h1 class="text-3xl font-semibold mb-6">Edit User</h1>
 
             <!-- Product Form -->
-            <form id="add-user-form" action="" method="POST"
+            <form id="edit-user-form" action="" method="POST" 
                 class="bg-white p-6 shadow-lg rounded-lg w-full md:w-[600px] grid gap-5 grid-cols-2">
                 <div class="col-span-2 lg:col-span-1">
                     <label for="full_name" class="block text-sm font-medium text-gray-700">Full Name</label>
@@ -191,8 +190,7 @@
 
                 <div class="col-span-2 mt-5">
                     <button type="submit"
-                        class="w-full bg-gray-900 hover:bg-gray-600 text-white text-lg py-3 px-6 rounded-lg shadow-md transition-all duration-300">Edit
-                        User</button>
+                        class="w-full bg-gray-900 hover:bg-gray-600 text-white text-lg py-3 px-6 rounded-lg shadow-md transition-all duration-300">Edit User</button>
                 </div>
             </form>
         </div>
@@ -212,7 +210,7 @@
 
 
         // form validation 
-        document.getElementById('add-user-form').addEventListener('submit', function (e) {
+        document.getElementById('edit-user-form').addEventListener('submit', function (e) {
             e.preventDefault(); // Prevent form submission
             let valid = true;
 
